Google One Tap authenticate

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">GeminiApp</string>
+    <string name="oauth">177161535428-ar9831t99sne1sb35actfogik9m7ahl4.apps.googleusercontent.com</string>
 </resources>
